baml_language/crates/baml_tests/snapshots/compiles/comment_after_string_in_config/baml_tests__compiles__comment_after_string_in_config__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.OpenRouterMistralSmall3_1_24b$new(lenient: bool) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: bool // lenient // param
    let _2: baml.llm.PrimitiveClientOptions
    let _3: string
    let _4: map<string, string>
    let _5: map<string, string>
    let _6: map<string, unknown>

    bb0: {
        _3 = call const fn baml.env.get_or_panic_lenient(const "OPENROUTER_API_KEY", copy _1) -> [bb1];
    }

    bb1: {
        _4 = {  }: map<string, string>;
        _5 = {  }: map<string, string>;
        _6 = { const "temperature": const 0.1_f64 }: map<string, unknown>;
        _2 = baml.llm.PrimitiveClientOptions { const "mistralai/mistral-small-3.1-24b-instruct", const "https://openrouter.ai/api/v1", const null, const null, const null, const null, const null, const null, const null, copy _3, const null, const null, copy _4, copy _5, copy _6 };
        _0 = baml.llm.PrimitiveClient { const "OpenRouterMistralSmall3_1_24b", const "openai-generic", copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
