baml_language/crates/baml_tests/snapshots/compiles/comment_after_string_in_config/baml_tests__compiles__comment_after_string_in_config__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 6447
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
