baml_language/crates/baml_tests/snapshots/compiles/comment_after_string_in_config/baml_tests__compiles__comment_after_string_in_config__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.OpenRouterMistralSmall3_1_24b
    load_const null
    return
}

function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: unknown[], opts: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.OpenRouterMistralSmall3_1_24b$new(lenient: bool) -> null {
    load_const "OPENROUTER_API_KEY"
    load_var lenient
    call baml.env.get_or_panic_lenient
    store_var _3
    load_const "OpenRouterMistralSmall3_1_24b"
    load_const "openai-generic"
    load_const "mistralai/mistral-small-3.1-24b-instruct"
    load_const "https://openrouter.ai/api/v1"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_var _3
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_const 0.1
    load_const "temperature"
    load_type string
    load_type unknown
    alloc_map 1
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}
